--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,23 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.4.0
-  firebase_auth: ^5.2.0
-  firebase_messaging: ^15.0.4
-  # flutter_local_notifications: ^17.2.2
+
+  # Firebase core + latest compatible plugins
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  firebase_messaging: ^16.0.0
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
+
+  # Other dependencies
   shared_preferences: ^2.3.2
   fluttertoast: ^8.2.8
   url_launcher: ^6.3.0
   intl: ^0.19.0
-  cloud_firestore: ^5.3.0
   uuid: ^4.5.0
   pdf: ^3.11.1
   path_provider: ^2.1.4
   http: ^1.2.2
-  firebase_storage: ^12.2.0
   flutter_email_sender: ^6.0.3
   printing: ^5.10.4
   image_picker: ^1.1.2
+
 
 
 
