--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  # Firebase core + latest compatible plugins
+
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
-  firebase_messaging: ^16.0.0
+  # firebase_messaging: ^16.0.0
   cloud_firestore: ^6.0.0
   firebase_storage: ^13.0.0
 
